# teklif_asistani

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.claude/: settings.local.json
docs/: kullanici-plani.md  teknik-plan.md
docs/superpowers/plans/: 2026-04-13-phase1-desktop-app.md
docs/superpowers/specs/: 2026-04-13-phase1-desktop-app-design.md
scripts/: release.sh
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  costs.rs  customers.rs  mod.rs  parameters.rs  proposals.rs  settings.rs
src-tauri/src/models/: cost.rs  customer.rs  mod.rs  parameter.rs  proposal.rs  settings.rs
src-tauri/src/storage/: atomic.rs  backup.rs  costs.rs  customers.rs  mod.rs  parameters.rs  paths.rs  proposals.rs  settings.rs  slug.rs
src-tauri/src/validation/: parameters.rs
src/components/: AppShell.tsx  DynamicField.tsx  FieldHistoryCombobox.tsx  ParameterForm.tsx  UnsavedGuard.tsx
src/lib/: api.ts  errors.ts  schema.test.ts  schema.ts
src/lib/i18n/: tr.ts
src/routes/: Backup.tsx  Costs.tsx  Dashboard.tsx  Parameters.tsx  Settings.tsx
src/routes/Customers/: Detail.tsx  Form.tsx  List.tsx
src/routes/Proposals/: Detail.tsx  Form.tsx  List.tsx
src/stores/: parameters.ts  settings.ts
